--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ actix-web = { version = "2.0", optional = true }
 actix = { version = "0.9", optional = true }
 failure = { version = "0.1", optional = true }
 warp = { version = "0.2", optional = true, default-features = false }
+rocket = { version = "0.4.2", optional = true }
 
 [features]
 default = []
@@ -29,3 +30,4 @@ with-hyper = ["hyper"]
 with-warp = ["warp"]
 with-failure = ["failure"]
 with-api-error = []
+with-rocket = ["rocket"]
