--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ actix-web = { version = "2.0", optional = true }
 actix = { version = "0.9", optional = true }
 failure = { version = "0.1", optional = true }
 warp = { version = "0.2", optional = true, default-features = false }
-rocket = { version = "0.4.4", optional = true }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", optional = true }
 
 [features]
 default = []
